--- a/ProjectProposalGroup061Sp22.ipynb
+++ b/ProjectProposalGroup061Sp22.ipynb
@@ -135,7 +135,7 @@
     "| 5/17  | 3 PM  | Complete analysis; Draft results/conclusion/discussion| Discuss/edit full project; Checkpoint survey |\n",
     "| 5/24  | 3 PM  | Complete results, conclusion, discussion | Discuss/edit full project; Discuss plan for project video; Checkpoint survey |\n", 
     "| 5/31  | 3 PM  | Record parts for video | Discuss/edit full project; Discuss plan for project video; Checkpoint survey |\n", 
-    "| 6/06  | before 11:59 PM  | Edit project video | Review and turn in Final Project, Video, Group Project Surveys |\n"
+    "| 6/06  | before 11:59 PM  | Edit project video | Review and turn in Final Project, Video, Group Project Surveys |"
    ]
   }
  ],
