--- a/ProjectProposalGroup061Sp22.ipynb
+++ b/ProjectProposalGroup061Sp22.ipynb
@@ -13,11 +13,11 @@
    "source": [
     "# Names\n",
     "\n",
-    "- Arnav Tayal\n",
-    "- Chaewon Heo\n",
-    "- Martha Chow\n",
-    "- Zhiyi Zhu\n",
-    "
+    "- Ant Man\n",
+    "- Hulk\n",
+    "- Iron Man\n",
+    "- Thor\n",
+    "- Wasp"
    ]
   },
   {
@@ -107,11 +107,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* *Communicating with one another in a timely manner about tasks to be completed *\n",
-    "* *Be transparent about schedules and understanding when others are busy (within reason*\n",
-    "* *Set and respect deadlines after every meeting*\n",
-    "* *Give each other feedback regularly and be receptive to others’ comments*\n
-"
+    "* *Team Expectation 1*\n",
+    "* *Team Expectation 2*\n",
+    "* *Team Expecation 3*\n",
+    "* ..."
    ]
   },
   {
@@ -127,7 +126,13 @@
    "source": [
     "| Meeting Date  | Meeting Time| Completed Before Meeting  | Discuss at Meeting |\n",
     "|---|---|---|---|\n",
- 
+    "| 1/20  |  1 PM | Read & Think about COGS 108 expectations; brainstorm topics/questions  | Determine best form of communication; Discuss and decide on final project topic; discuss hypothesis; begin background research | \n",
+    "| 1/26  |  10 AM |  Do background research on topic | Discuss ideal dataset(s) and ethics; draft project proposal | \n",
+    "| 2/1  | 10 AM  | Edit, finalize, and submit proposal; Search for datasets  | Discuss Wrangling and possible analytical approaches; Assign group members to lead each specific part   |\n",
+    "| 2/14  | 6 PM  | Import & Wrangle Data (Ant Man); EDA (Hulk) | Review/Edit wrangling/EDA; Discuss Analysis Plan   |\n",
+    "| 2/23  | 12 PM  | Finalize wrangling/EDA; Begin Analysis (Iron Man; Thor) | Discuss/edit Analysis; Complete project check-in |\n",
+    "| 3/13  | 12 PM  | Complete analysis; Draft results/conclusion/discussion (Wasp)| Discuss/edit full project |\n",
+    "| 3/19  | Before 11:59 PM  | NA | Turn in Final Project & Group Project Surveys |"
    ]
   }
  ],
