--- a/ProjectProposalGroup061Sp22.ipynb
+++ b/ProjectProposalGroup061Sp22.ipynb
@@ -13,10 +13,11 @@
    "source": [
     "# Names\n",
     "\n",
-    "- Arnav Tayal\n",
-    "- Chaewon Heo\n",
-    "- Martha Chow\n",
-    "- Zhiyi Zhu\n",
+    "- Ant Man\n",
+    "- Hulk\n",
+    "- Iron Man\n",
+    "- Thor\n",
+    "- Wasp"
    ]
   },
   {
@@ -30,9 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Main question: Are characteristics of an individual’s diet (such as the amount of calories, macronutrients, and/or micronutrients) correlated with their likelihood of contracting COVID-19?\n",
-    "Sub-questions:Can we correlate diet type (eg. vegetarian, keto, pescetarian) with an individual’s likelihood of contracting COVID-19? Which characteristic is the strongest predictor? \n",
-    "Potential extension: Does correlation between a characteristic necessarily mean causation (eg. If we find that there is a positive correlation between kcal/day and likelihood of contracting COVID-19, does that necessarily mean that a high calorie diet leads to higher vulnerability to COVID-19?)? How much literature is there on databases to support the causal relationship?"
+    "*Fill in your research question here*"
    ]
   },
   {
