--- a/ProjectProposalGroup061Sp22.ipynb
+++ b/ProjectProposalGroup061Sp22.ipynb
@@ -13,11 +13,10 @@
    "source": [
     "# Names\n",
     "\n",
-    "- Ant Man\n",
-    "- Hulk\n",
-    "- Iron Man\n",
-    "- Thor\n",
-    "- Wasp"
+    "- Arnav Tayal\n",
+    "- Chaewon Heo\n",
+    "- Martha Chow\n",
+    "- Zhiyi Zhu\n",
    ]
   },
   {
