--- a/ProjectProposalGroup061Sp22.ipynb
+++ b/ProjectProposalGroup061Sp22.ipynb
@@ -16,7 +16,7 @@
     "- Arnav Tayal\n",
     "- Chaewon Heo\n",
     "- Martha Chow\n",
-    "- Zhiyi Zhu\n",
+    "- Zhiyi Zhu\n"
    ]
   },
   {
