--- a/ProjectProposalGroup061Sp22.ipynb
+++ b/ProjectProposalGroup061Sp22.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Main question: Are characteristics of an individual’s diet (such as the amount of calories, macronutrients, and/or micronutrients) correlated with their likelihood of contracting COVID-19? \n", 
+    "Main question: Are characteristics of an individual’s diet (such as the amount of calories, macronutrients, and/or micronutrients) correlated with their likelihood of contracting COVID-19? \n",
     "\n",
     "Sub-questions: Can we correlate diet type (eg. vegetarian, keto, pescetarian) with an individual’s likelihood of contracting COVID-19? Which characteristic is the strongest predictor? \n",
     "\n",
@@ -94,7 +94,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Explain what the ideal dataset you would want to answer this question. (This should include: What variables? How many observations? Who/what/how would these data be collected? How would these data be stored/organized?)*"
+    "*"We intend to have variables to represent food quality metrics (% fat quantity, energy intake (kcal), food supply quantity(kg) % protein), obesity rates, undernourished rates, and the number of COVID 19 cases. Ideally these variables will be stored in structured format, most likely using a pandas dataframe to ensure each column has a different variable and each row is of a different observation. We can also store this data in a semi-structured format, such as a JSON file. \n",
+"\n",
+"We would ideally like to draw our observations from a sample of at least several hundred people as we intend to apply our findings to a global scale and make comparisons of diet vs COVID-19 infection relationship between different regions of the world. These observations would come from published data from the Food and Agriculture United Nations. The COVID data and observations would come from Johns Hopkins Center for Systems Science and Engineering. We intend to evaluate trends from the past 2 years, starting from April 2020.*"
    ]
   },
   {
