--- a/ProjectProposalGroup061Sp22.ipynb
+++ b/ProjectProposalGroup061Sp22.ipynb
@@ -96,7 +96,7 @@
    "source": [
     "We intend to have variables to represent food quality metrics (% fat quantity, energy intake (kcal), food supply quantity(kg) % protein), obesity rates, undernourished rates, and the number of COVID 19 cases. Ideally these variables will be stored in structured format, most likely using a pandas dataframe to ensure each column has a different variable and each row is of a different observation. We can also store this data in a semi-structured format, such as a JSON file. \n",
 "\n",
-"We would ideally like to draw our observations from a sample of at least several hundred people as we intend to apply our findings to a global scale and make comparisons of diet vs COVID-19 infection relationship between different regions of the world. These observations would come from published data from the Food and Agriculture United Nations. The COVID data and observations would come from Johns Hopkins Center for Systems Science and Engineering. We intend to evaluate trends from the past 2 years, starting from April 2020.*"
+"We would ideally like to draw our observations from a sample of at least several hundred people as we intend to apply our findings to a global scale and make comparisons of diet vs COVID-19 infection relationship between different regions of the world. These observations would come from published data from the Food and Agriculture United Nations. The COVID data and observations would come from Johns Hopkins Center for Systems Science and Engineering. We intend to evaluate trends from the past 2 years, starting from April 2020."
    ]
   },
   {
@@ -110,14 +110,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Fill in your ethics & privacy discussion here*"
+    "The dataset for food supply, nutrition values, obesity, and undernourished percentages were collected from United Nations Food and Agricultural Organizations website; the dataset for population count were collected from Population Reference Bureau; the dataset for COVID-19 cases were collected from Johns Hopkins Center for Systems Science and Engineering website. Because all dataset are de-identified and are collected from global organizations, there is no exposure of personally identifiable information nor terms of use issues as well as no collection bias. \n",
+"\n",
+"However, dataset bias may be present due to imbalance of population data for each country. Such issues should be able to be resolved through normalization of data per country (e.g. using proportions) before and during the analysis. This will secure equitable analysis and fairness across groups. \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Team Expectations "
+"* Communicating with one another in a timely manner about tasks to be completed \n",
+"* Be transparent about schedules and understanding when others are busy (within reason) \n",
+"* Set and respect deadlines after every meeting \n",
+"* Give each other feedback regularly and be receptive to others’ comments"
    ]
   },
   {
