--- a/ProjectProposalGroup061Sp22.ipynb
+++ b/ProjectProposalGroup061Sp22.ipynb
@@ -119,20 +119,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-"* Communicating with one another in a timely manner about tasks to be completed \n",
-"* Be transparent about schedules and understanding when others are busy (within reason) \n",
-"* Set and respect deadlines after every meeting \n",
-"* Give each other feedback regularly and be receptive to others’ comments"
+    "# Team Expectations "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* *Team Expectation 1*\n",
-    "* *Team Expectation 2*\n",
-    "* *Team Expecation 3*\n",
-    "* ..."
+"* Communicating with one another in a timely manner about tasks to be completed \n",
+"* Be transparent about schedules and understanding when others are busy (within reason) \n",
+"* Set and respect deadlines after every meeting \n",
+"* Give each other feedback regularly and be receptive to others’ comments"
    ]
   },
   {
@@ -148,13 +145,15 @@
    "source": [
     "| Meeting Date  | Meeting Time| Completed Before Meeting  | Discuss at Meeting |\n",
     "|---|---|---|---|\n",
-    "| 1/20  |  1 PM | Read & Think about COGS 108 expectations; brainstorm topics/questions  | Determine best form of communication; Discuss and decide on final project topic; discuss hypothesis; begin background research | \n",
-    "| 1/26  |  10 AM |  Do background research on topic | Discuss ideal dataset(s) and ethics; draft project proposal | \n",
-    "| 2/1  | 10 AM  | Edit, finalize, and submit proposal; Search for datasets  | Discuss Wrangling and possible analytical approaches; Assign group members to lead each specific part   |\n",
-    "| 2/14  | 6 PM  | Import & Wrangle Data (Ant Man); EDA (Hulk) | Review/Edit wrangling/EDA; Discuss Analysis Plan   |\n",
-    "| 2/23  | 12 PM  | Finalize wrangling/EDA; Begin Analysis (Iron Man; Thor) | Discuss/edit Analysis; Complete project check-in |\n",
-    "| 3/13  | 12 PM  | Complete analysis; Draft results/conclusion/discussion (Wasp)| Discuss/edit full project |\n",
-    "| 3/19  | Before 11:59 PM  | NA | Turn in Final Project & Group Project Surveys |"
+    "| 4/1 |  3 PM | Read & Think about COGS 108 expectations; brainstorm topics/questions  | Draft project topic and research question; discuss hypothesis; divide workload for background research and ethics section; coordinate meeting with TA; set deadlines | \n",
+    "| 4/22 |  6 PM | Check with TA if our RQ is feasible; Do background research on topic; formalize hypothesis; complete ethics section; search for datasets | Review and submit the proposal by the deadline; Checkpoint survey | \n",
+    "| 4/26  | 6 PM  | Download and go over the Data; understand what each column stands for.   |  Discuss Wrangling and possible analytical approaches; Assign group members to lead each specific part; Review/Edit wrangling/EDA; Discuss Analysis Plan; Checkpoint survey   |\n",
+    "| 5/3  | 6 PM  | Finalize wrangling/EDA; Begin Analysis of Kaggle Data | Discuss/edit Analysis; Complete project check-in; Checkpoint survey   |\n",
+    "| 5/10  | 6 PM  | Do some analysis | Discuss/edit Analysis; Discuss visualizing strategies; Checkpoint survey |\n",
+    "| 5/17 | 6 PM  | Complete analysis; Draft results/conclusion/discussion| Discuss/edit full project; Checkpoint survey |\n",
+    "| 5/24  | 6 PM  | Complete results, conclusion, discussion | Discuss/edit full project; Discuss plan for project video; Checkpoint survey |"
+    "| 5/31  | 6 PM  | Record parts for video | Discuss/edit full project and video; Checkpoint survey |"
+    "| 6/06  | Before 11:59 PM  | Edit project video | Review and turn in Final Project, Video, Group Project Surveys |"
    ]
   }
  ],
