--- a/ProjectProposalGroup061Sp22.ipynb
+++ b/ProjectProposalGroup061Sp22.ipynb
@@ -151,8 +151,8 @@
     "| 5/3  | 6 PM  | Finalize wrangling/EDA; Begin Analysis of Kaggle Data | Discuss/edit Analysis; Complete project check-in; Checkpoint survey   |\n",
     "| 5/10  | 6 PM  | Do some analysis | Discuss/edit Analysis; Discuss visualizing strategies; Checkpoint survey |\n",
     "| 5/17 | 6 PM  | Complete analysis; Draft results/conclusion/discussion| Discuss/edit full project; Checkpoint survey |\n",
-    "| 5/24  | 6 PM  | Complete results, conclusion, discussion | Discuss/edit full project; Discuss plan for project video; Checkpoint survey |"
-    "| 5/31  | 6 PM  | Record parts for video | Discuss/edit full project and video; Checkpoint survey |"
+    "| 5/24  | 6 PM  | Complete results, conclusion, discussion | Discuss/edit full project; Discuss plan for project video; Checkpoint survey |\n",
+    "| 5/31  | 6 PM  | Record parts for video | Discuss/edit full project and video; Checkpoint survey |\n",
     "| 6/06  | Before 11:59 PM  | Edit project video | Review and turn in Final Project, Video, Group Project Surveys |"
    ]
   }
