--- a/Group061Sp22-master/EDACheckpointGroup061Sp22.ipynb
+++ b/Group061Sp22-master/EDACheckpointGroup061Sp22.ipynb
@@ -14,9 +14,9 @@
     "# Names\n",
     "\n",
     "* Arnav Tayal\n",
-    "-Chaewon Heo\n",
-    "-Martha Chow\n",
-    "-Zhiyi Zhu"
+    "* Chaewon Heo\n",
+    "* Martha Chow\n",
+    "* Zhiyi Zhu"
    ]
   },
   {
