--- a/EDACheckpointGroup061Sp22.ipynb
+++ b/EDACheckpointGroup061Sp22.ipynb
@@ -95,10 +95,10 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Country</th>\n",
-       "      <th>Confirmed</th>\n",
-       "      <th>Deaths</th>\n",
-       "      <th>Recovered</th>\n",
-       "      <th>Population</th>\n",
+       "      <th>confirmed</th>\n",
+       "      <th>deaths</th>\n",
+       "      <th>recovered</th>\n",
+       "      <th>population</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
