--- a/FinalProjectGroup061Sp22.ipynb
+++ b/FinalProjectGroup061Sp22.ipynb
@@ -2381,9 +2381,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2958,6 +2956,15 @@
    "source": [
     "# Visualize carbohydrate consumption \n",
     "world.plot(column = 'carb_sum', cmap = 'GnBu', legend = True, legend_kwds={'label': \"Carbohydrate Consumption (kg/capita/yr)\",'orientation': 'horizontal'}, figsize = (15,10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Take Home from Geospatial__\n",
+    "One can observe that countries in North America, South America and Europe have higher rates of COVID compared to Africa, Asia and Australia. \n",
+    "We can also observe that these same continents also have relatively high fat consumption rates compared to the rest of the world, this suggests a __relationship between fat consumption and COVID rates__. It seems that carbohydrate consumption and protein consumption do not exhibit spatial autocorrelation in the sense there are not certain continents with higher consumption than others. There also __does not appear__ to be a relationship between carbohydrate or protein consumption rates with COVID infection rates.  "
    ]
   },
   {
@@ -4293,9 +4300,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -4919,6 +4924,12 @@
     "2. There is no relationship bewteen adherence to macronutrient consumption guidelines (diet quality) and COVID case rates.\n",
     "3. There is no relationship bewteen caloric intake and COVID case rates.\n",
     "\n",
+    "We decided to include a geospatial visualization to better observe spatial trends, for example we wanted to know if there are certain continents or larger regions of the world that have similar dietary consumption patterns and similar amounts of COVID case rates. \n",
+    "Via our geospatial visualization, we found that: \n",
+    "1. Only fat consumption exhibits spatial autocorrelation, continents with higher fat consumption also had higher COVID case rates, which supports our linear regression analysis\n",
+    "2. There is no spatial autocorrelation protein or carbohydrate consumption and no relationship between protein or carbohydrate consumption and COVID case rates. \n",
+    "\n",
+    "\n",
     "This does not support our hypothesis that _the characteristics of an individual’s diet is correlated with the likelihood of COVID-19 infection_ and that _caloric intake is the most accurate predictor of likelihood to contract COVID-19._\n",
     "\n",
     "Although we found fewer relationships than expected, our results provided interesting insight about dietary habits across the globe. \n",
@@ -4929,6 +4940,7 @@
     "2. High plant food source consumption (eg. pulses) is negatively correlated with COVID cases\n",
     "\n",
     "These conclusions support our hypothesis that _diets types that are correlated with decreased incidence of COVID-19 infection have common characteristics._ More specifically, they are consistent with the abundance of research that suggest plant-based diets benefit health.\n",
+    "\n",
     "\n",
     "We created two KNN models: one to predict COVID cases based on macronutrient consumption, and another based on 23 food sources. For both models, we were able to get correlation coefficients of above 0.5 for actual vs predicted COVID cases. That being said, the correlation coefficient for food source KNN model is higher than that for macronutrients and, therefore, is more accurate. Given that the pvals found for all four correlations are smaller than 0.05, we are confident inthe predictive power of our models. The accuracy of our models lend weight to our hypothesis that _the characteristics of an individual’s diet is correlated with the likelihood of COVID-19 infection_.\n",
     "\n",
@@ -4952,7 +4964,9 @@
     "\n",
     "Martha: Health score, Kcal vs COVID-19 rates, & Food Source vs COVID-19 rates\n",
     "\n",
-    "Zhiyi: Data cleaning, & Building KNN models"
+    "Zhiyi: Data cleaning, & Building KNN models\n",
+    "\n",
+    "Arnav: Geospatial analysis, COVID distributions, macros and covid linear regression  "
    ]
   }
  ],
@@ -4972,7 +4986,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
