--- a/FinalProjectGroup061Sp22.ipynb
+++ b/FinalProjectGroup061Sp22.ipynb
@@ -4924,8 +4924,9 @@
     "2. There is no relationship bewteen adherence to macronutrient consumption guidelines (diet quality) and COVID case rates.\n",
     "3. There is no relationship bewteen caloric intake and COVID case rates.\n",
     "\n",
-    "We decided to include a geospatial visualization to better observe spatial trends, for example we wanted to know if there are certain continents or larger regions of the world that have similar dietary consumption patterns and similar amounts of COVID case rates. \n",
-    "Via our geospatial visualization, we found that: \n",
+    "We decided to include geospatial visualizations to better observe spatial trends, for example we wanted to know if there are certain continents or larger regions of the world that have similar dietary consumption patterns and similar amounts of COVID case rates. \n",
+    "\n",
+    "Via our geospatial visualizations, we found that: \n",
     "1. Only fat consumption exhibits spatial autocorrelation, continents with higher fat consumption also had higher COVID case rates, which supports our linear regression analysis\n",
     "2. There is no spatial autocorrelation protein or carbohydrate consumption and no relationship between protein or carbohydrate consumption and COVID case rates. \n",
     "\n",
