--- a/FinalProjectGroup061Sp22.ipynb
+++ b/FinalProjectGroup061Sp22.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# COGS 108 - An Exploratory Analysis of Diet and COVID Infection Rates"
+    "# COGS 108 - An Exploratory Analysis of Diet and COVID-19 Infection Rates"
    ]
   },
   {
@@ -2862,7 +2862,7 @@
    ],
    "source": [
     "# visualization for Covid cases\n",
-    "world.plot(column = 'confirmed', cmap = 'GnBu', legend = True, legend_kwds = {'label': 'Confirmed Covid Cases (%)', 'orientation': 'horizontal'}, figsize = (15,10))"
+    "world.plot(column = 'confirmed', cmap = 'GnBu', legend = True, legend_kwds = {'label': 'Confirmed Covid Cases (%)', 'orientation': 'horizontal'}, figsize = (15,10));"
    ]
   },
   {
@@ -2893,7 +2893,7 @@
    ],
    "source": [
     "# Visualize fat consumption \n",
-    "world.plot(column = 'fat_sum', cmap = 'GnBu', legend = True, legend_kwds={'label': \"Fat Consumption (kg/capita/year)\",'orientation': 'horizontal'}, figsize = (15,10))"
+    "world.plot(column = 'fat_sum', cmap = 'GnBu', legend = True, legend_kwds={'label': \"Fat Consumption (kg/capita/year)\",'orientation': 'horizontal'}, figsize = (15,10));"
    ]
   },
   {
@@ -2924,7 +2924,7 @@
    ],
    "source": [
     "# Visualize protein consumption \n",
-    "world.plot(column = 'protein_sum', cmap = 'GnBu', legend = True, legend_kwds={'label': \"Protein Consumption (kg/capita/year)\",'orientation': 'horizontal'}, figsize = (15,10))"
+    "world.plot(column = 'protein_sum', cmap = 'GnBu', legend = True, legend_kwds={'label': \"Protein Consumption (kg/capita/year)\",'orientation': 'horizontal'}, figsize = (15,10));"
    ]
   },
   {
@@ -2955,14 +2955,13 @@
    ],
    "source": [
     "# Visualize carbohydrate consumption \n",
-    "world.plot(column = 'carb_sum', cmap = 'GnBu', legend = True, legend_kwds={'label': \"Carbohydrate Consumption (kg/capita/yr)\",'orientation': 'horizontal'}, figsize = (15,10))"
+    "world.plot(column = 'carb_sum', cmap = 'GnBu', legend = True, legend_kwds={'label': \"Carbohydrate Consumption (kg/capita/yr)\",'orientation': 'horizontal'}, figsize = (15,10));"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Take Home from Geospatial__\n",
     "One can observe that countries in North America, South America and Europe have higher rates of COVID compared to Africa, Asia and Australia. \n",
     "We can also observe that these same continents also have relatively high fat consumption rates compared to the rest of the world, this suggests a __relationship between fat consumption and COVID rates__. It seems that carbohydrate consumption and protein consumption do not exhibit spatial autocorrelation in the sense there are not certain continents with higher consumption than others. There also __does not appear__ to be a relationship between carbohydrate or protein consumption rates with COVID infection rates.  "
    ]
@@ -4969,6 +4968,20 @@
     "\n",
     "Arnav: Geospatial analysis, COVID distributions, macros and covid linear regression  "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Video Guide"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://youtu.be/RVcNM77kezM"
+   ]
   }
  ],
  "metadata": {
@@ -4987,7 +5000,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
